examples/errors/unterminated_string.eigs
# ERROR DEMO — string literal missing its closing quote.
# expect-error: Syntax error line 3: unterminated string
x is "abc
